--- a/client/src/components/screens/PlannerPage/PlannerPage.scss
+++ b/client/src/components/screens/PlannerPage/PlannerPage.scss
@@ -1,38 +1,45 @@
-.wrapper {
+.planner-page-wrapper {
     margin: 12px;
     display: flex;
     text-align: left;
+    
+    .card {
+        width: 25%;
+        margin-right: 14px;
+        position: relative;
+        min-width: 200px;
+
+        &-header {
+            margin-bottom: 20px;
+        }
+
+        &:last-child {
+            margin-right: 0;
+        }
+
+        &-2 {
+            width: 100%;
+            margin-bottom: 12px;
+
+            &:last-child {
+                margin-bottom: 16px;
+            }
+
+            .rolename {
+                margin-bottom: 10px;
+            }
+        }
+
+        &-actions {
+            padding: 16px;
+
+            .resources-button {
+                bottom: 0;
+                position: absolute;
+                background-color: #d15038;
+                margin-bottom: 16px;
+            }
+        }
+    }    
 }
 
-.card {
-    width: '25%';
-    margin-right: 14px;
-    position: relative;
-    min-width: 200px;
-    &:last-child {
-        margin-right: 0;
-    }
-}
-
-.title {
-    font-size: 14px;
-}
-
-.card2 {
-    width: '100%';
-    margin-bottom: 10px;
-}
-
-.roleName {
-    margin-bottom: 10px;
-}
-
-.resourcesButton {
-    bottom: 0;
-    position: 'absolute';
-    background-color: #d15038 !important;
-}
-
-.cardActions {
-    padding: 16px !important;
-}
