added more edit components

--- a/client/src/components/screens/PlannerPage/PlannerPage.scss
+++ b/client/src/components/screens/PlannerPage/PlannerPage.scss
@@ -28,6 +28,10 @@
             .rolename {
                 margin-bottom: 10px;
             }
+
+            .additional-info {
+                border-width: 0px;
+            }
         }
 
         &-actions {
