--- a/client/src/components/screens/PlannerPage/PlannerPage.scss
+++ b/client/src/components/screens/PlannerPage/PlannerPage.scss
@@ -44,6 +44,7 @@
 
         &-actions {
             padding: 16px;
+            margin-top: 16px;
 
             .resources-button {
                 bottom: 0;
