--- a/client/src/components/screens/PlannerPage/PlannerPage.scss
+++ b/client/src/components/screens/PlannerPage/PlannerPage.scss
@@ -33,12 +33,14 @@
                 border-width: 0px;
             }
 
-            .add-team-member {
-                width: 800;
-                display: "flex";
-                flex-wrap: "wrap";
-                justify-content: "center";
-                align-items: "center";
+            .team-member {
+                margin-right: 5px;
+                color: black;
+            }
+
+            .tag {
+                margin-right: 5px;
+                color: lightslategrey;
             }
         }
 
