--- a/client/src/components/screens/HomePage/HomePage.scss
+++ b/client/src/components/screens/HomePage/HomePage.scss
@@ -1,5 +1,7 @@
+@import './../../../globals.scss';
+
 .home-page-wrapper {
-   background: linear-gradient(#D83B1E 0%, #FE9969 100%);
+   background: linear-gradient($primary-color 0%, #FE9969 100%);
    
    .main-verse {
       flex-grow: 1;
@@ -30,7 +32,7 @@
       max-width: "100%";
       height: 100px;
       font-weight: bold;
-      color: #D83B1E;
+      color: $primary-color;
       font-size: 20px;
       padding: 12px;
       border-radius: 15px;
