--- a/client/src/components/screens/PlannerPage/PlannerPage.scss
+++ b/client/src/components/screens/PlannerPage/PlannerPage.scss
@@ -1,18 +1,19 @@
 @import "./../../../globals.scss";
 
 .planner-page-wrapper {
-    margin: 12px;
+    margin: 1% 0 1% 1%;
     display: flex;
     text-align: left;
 
     .card {
-        width: 25%;
-        margin-right: 14px;
+        width: 24%;
+        margin-right: 1%;
         position: relative;
-        min-width: 200px;
+        // background: #fff1dc;
+        box-shadow: rgba(50, 50, 105, 0.15) 0px 1px 5px 0px, rgba(0, 0, 0, 0.05) 0px 1px 1px 0px;
 
         &-header {
-            padding: 10px 10px 0 20px;
+            padding: 10px 10px 0 18px;
 
             .title-button-wrapper {
                 display: flex;
@@ -20,36 +21,63 @@
                 justify-content: space-between;
 
                 .title {
-                    .MuiOutlinedInput-multiline {
-                        padding: 8px 0;
+                    width: 75%;
+
+                    .MuiInputBase-multiline {
+                        padding: 0px;
         
                         textarea {
                             color: $primary-color;
+                            font-size: $fontsize-header1;
                         }
                     }
                 }
 
                 .edit-button svg {
-                    font-size: $fontsize-header1;
+                    font-size: $fontsize-header2;
+                }
+
+                &-edit {
+                    @extend .title-button-wrapper;
+                    .title {
+                        .MuiInputBase-multiline {
+                            padding: 10px;
+                        }
+                    }
                 }
             }
 
             .date-picker-wrapper {
+                .MuiFormControl-marginNormal {
+                    margin: 10px 0;
+
+                    .MuiOutlinedInput-adornedEnd {
+                        padding: 0;
+                        width: 70%;
+    
+                        .MuiOutlinedInput-input {
+                            padding: 10px;
+                        }
+                    }
+                }
+
                 &-no-margin {
+                    @extend .date-picker-wrapper;
                     .MuiFormControl-marginNormal {
                         margin: 0;
+
+                        .MuiInputBase-input.Mui-disabled {
+                            color:  black;
+                        }
                     }
                 }
             }
         }
 
-        &:last-child {
-            margin-right: 0;
-        }
-
         &-role-section {
             margin-bottom: 12px;
             padding: 16px;
+            box-shadow: rgba(50, 50, 105, 0.15) 0px 1px 5px 0px, rgba(0, 0, 0, 0.05) 0px 1px 1px 0px;
 
             &:last-child {
                 margin-bottom: 16px;
@@ -62,12 +90,12 @@
                 justify-content: space-between;
                 
                 .rolename {
-                    margin-top: 5px;
-                    font-size: $fontsize-header1;
+                    font-size: $fontsize-header2;
+                    color: #ec9e00;
                 };
 
                 .edit-button svg {
-                    font-size: $fontsize-header1;
+                    font-size: $fontsize-header2;
                 }
             }
 
@@ -81,11 +109,6 @@
                     flex-wrap: wrap;
                     position: relative;
                     margin-bottom: 8px;
-
-                    &-no-margin {
-                        @extend .team-member-wrapper;
-                        margin-bottom: 0;
-                    }
                     
                     .team-member {
                         margin-right: 5px;
@@ -94,6 +117,11 @@
 
                     .tag {
                         color: lightslategrey;
+                    }
+
+                    &-no-margin {
+                        @extend .team-member-wrapper;
+                        margin-bottom: 0;
                     }
                 }
 
@@ -113,29 +141,25 @@
                 .add-team-member-section {
                     display: flex;
                     align-items: center;
+                    margin-top: 8px;
 
                     .add-team-member {
-                        width: 50%;
-                        margin-right: 16px;
-
-                        .team-member-select {
-                            margin-top: 0 !important;
-                            font-size: $fontsize-base;
-                        }
+                        width: 56%;
+                        margin-right: 2.5%;
                     }
 
                     .add-tag {
-                        width: 25%;
+                        width: 28%;
 
-                        .MuiInput-formControl {
-                            margin-top: 0 !important;
-                            height: 29.5px;
-                            font-size: $fontsize-base;
+                        .MuiOutlinedInput-multiline {
+                            padding: 0;
+                            padding-bottom: 3px;
+
+                            textarea {
+                                height: 27px !important;
+                                padding: 10px 8px 0 8px;
+                            }
                         }
-                    }
-                    
-                    .add-button {
-                        margin-top: 14px;
                     }
                 }
             }
@@ -147,7 +171,7 @@
             .text-section {
                 padding: 0;
 
-                .MuiOutlinedInput-multiline {
+                .MuiOutlinedInput-multiline, .MuiInput-multiline {
                     padding: 16px 0 8px;
 
                     textarea {
