--- a/client/src/components/screens/PlannerPage/PlannerPage.scss
+++ b/client/src/components/screens/PlannerPage/PlannerPage.scss
@@ -19,6 +19,7 @@
         text-align: left;
 
         .card {
+            border-radius: 20px;
             width: 24%;
             margin-right: 1%;
             position: relative;
@@ -88,6 +89,7 @@
             }
 
             &-role-section {
+                border-radius: 15px;
                 margin-bottom: 12px;
                 padding: 16px;
                 box-shadow: rgba(50, 50, 105, 0.15) 0px 1px 5px 0px, rgba(0, 0, 0, 0.05) 0px 1px 1px 0px;
