--- a/client/src/components/screens/PlannerPage/PlannerPage.scss
+++ b/client/src/components/screens/PlannerPage/PlannerPage.scss
@@ -11,12 +11,29 @@
             display: flex;
             margin-right: 20px;
         }
+
+        .time-header {
+            font-size: $fontsize-header1;
+            color: $primary-color;
+        }
     }
 
     .cards-wrapper {
         display: flex;
         margin: 1% 0 1% 1%;
         text-align: left;
+
+        .pagination-button {
+            &-previous {
+                margin: 30% 1% 30% 0; //To make cleaner
+            }
+            &-next {
+                margin: 30% 0 30% 0; //To make cleaner
+            }
+            &-icon {
+                transform: scale(3.0);
+            }
+        }
 
         .card {
             border-radius: 20px;
