Added deleting of events
Note: fixed error from changing status code
- added documentation PDF
- minor styling fixes

--- a/client/src/components/screens/PlannerPage/PlannerPage.scss
+++ b/client/src/components/screens/PlannerPage/PlannerPage.scss
@@ -36,7 +36,7 @@
         }
 
         .card {
-            border-radius: 20px;
+            border-radius: 15px;
             width: 24%;
             margin-right: 1%;
             position: relative;
@@ -62,6 +62,10 @@
                                 font-size: $fontsize-header1;
                             }
                         }
+                    }
+
+                    .delete-icon {
+                        color: rgb(219, 58, 58);
                     }
 
                     .edit-button svg {
