adding some scss

--- a/client/src/components/screens/PlannerPage/PlannerPage.scss
+++ b/client/src/components/screens/PlannerPage/PlannerPage.scss
@@ -109,6 +109,10 @@
                 }
             }
 
+            .worship-leader {
+                margin-bottom: 12px;
+            }
+
             &-role-section {
                 border-radius: 15px;
                 margin-bottom: 12px;
