--- a/client/src/components/screens/PlannerPage/PlannerPage.scss
+++ b/client/src/components/screens/PlannerPage/PlannerPage.scss
@@ -109,8 +109,14 @@
                 }
             }
 
-            .worship-leader {
-                margin-bottom: 12px;
+            .event-info {
+                display: flex;
+                .worship-leader {
+                    margin-right: 40%;
+                    margin-bottom: 12px;
+                    min-width: 30%;
+                }
+
             }
 
             &-role-section {
