--- a/client/src/components/screens/PlannerPage/EventCard.scss
+++ b/client/src/components/screens/PlannerPage/EventCard.scss
@@ -93,8 +93,7 @@
     }
 
     .role-section-wrapper {
-        max-height: 600px;
-        overflow-y: auto;
+        height: 600px !important;
     }
 
     .card-actions {
