--- a/client/src/components/screens/PlannerPage/EventCard.scss
+++ b/client/src/components/screens/PlannerPage/EventCard.scss
@@ -92,12 +92,13 @@
 
             .worship-leader {
                 .MuiSelect-outlined.MuiSelect-outlined {
-                    min-width: 70px;
+                    min-width: 90px;
                 }
             }
 
             .rehearsals {
-                margin-left: 30%;
+                margin-left: 20%;
+                margin-right: 3%;
                 .rehearsal-time {
                     display: flex;
                     justify-content: space-between;
