--- a/client/src/components/screens/PlannerPage/CreateEventModal.scss
+++ b/client/src/components/screens/PlannerPage/CreateEventModal.scss
@@ -1,10 +1,23 @@
 @import "./../../../globals.scss";
 
 .create-event-modal {
+    .header {
+        font-size: $fontsize-header1;
+        font-weight: bold;
+        margin-bottom: 6px;
+        text-align: center;
+    }
+
     .card {
         width: 100%;
         border-radius: 10px;
         margin-bottom: 10px;
+
+        .worship-leader {
+            .MuiSelect-outlined.MuiSelect-outlined {
+                min-width: 118px !important;
+            }
+        }
     }
 
     .create-button-wrapper {
