--- a/client/src/globals.scss
+++ b/client/src/globals.scss
@@ -1,10 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400&display=swap');
 $fontsize-base: 16px;
 $fontsize-header1: $fontsize-base + 6;
 $fontsize-header2: $fontsize-base + 3;
 $primary-color: #d15038;
 
-p {
-    font-family: "Roboto", "Helvetica", "Arial", sans-serif !important;
+p, div {
+    font-family: 'Nunito Sans', sans-serif !important;
 }
 
 .MuiIconButton-root {
