--- a/client/src/components/screens/PlannerPage/PlannerPage.scss
+++ b/client/src/components/screens/PlannerPage/PlannerPage.scss
@@ -33,6 +33,11 @@
         .pagination-button-icon {
             transform: scale(3);
         }
+
+        .cards-content-wrapper{
+            display: flex;
+            width: 94%;
+        }
     }
 }
 
