changed description css

--- a/client/src/components/screens/Login/Login.scss
+++ b/client/src/components/screens/Login/Login.scss
@@ -16,6 +16,13 @@
         border-radius: 10px;
     }
 
+    .description {
+        flex-grow: 1;
+        color: white;
+        padding-top: 50px;
+        border-radius: 10px;
+    }
+
     .logo-background {
         background-color: white;
         max-width: 20%;
