created basic dropdown ffor templates

--- a/client/src/components/screens/PlannerPage/CreateTemplate.scss
+++ b/client/src/components/screens/PlannerPage/CreateTemplate.scss
@@ -27,5 +27,9 @@
         .create-button {
             background-color: $primary-color;
         }
+
+        .delete-button {
+            background-color: red;
+        }
     }
 }
