--- a/client/src/components/screens/PlannerPage/EventCard.scss
+++ b/client/src/components/screens/PlannerPage/EventCard.scss
@@ -109,6 +109,7 @@
             .rehearsals {
                 .MuiButton-text {
                     padding: 6px 0 6px 8px;
+                    font-size: 12px;
                 }
             }
         }
