--- a/client/src/components/screens/PlannerPage/PlannerPage.scss
+++ b/client/src/components/screens/PlannerPage/PlannerPage.scss
@@ -2,17 +2,14 @@
 
 .planner-page-wrapper {
     .top-section {
-        padding: 0 15% 0 10%;
+        padding: 0 8% 0 8%;
         display: flex;
         align-items: center;
+        justify-content: space-between;
 
         .view-btn-wrapper {
-            width: 10%;
-            padding-top: 14px;
-        }
-
-        .time-select-wrapper2 {
-            width: 90%;
+            margin-top: 10px;
+            height: 30px;
         }
     }
 
