--- a/client/src/globals.scss
+++ b/client/src/globals.scss
@@ -6,7 +6,7 @@ $primary-color: #d15038;
 
 p, div {
     font-family: 'Nunito Sans', sans-serif !important;
-    font-size: $fontsize-base !important;
+    font-size: $fontsize-base;
 }
 
 .MuiIconButton-root {
