--- a/client/src/components/screens/ResourcesPage/ResourcesPage.scss
+++ b/client/src/components/screens/ResourcesPage/ResourcesPage.scss
@@ -2,48 +2,137 @@
 
 .resources-page-wrapper {
 
-    .title-wrapper {
-        display: flex;
-        padding-top: 35px;
-        align-items: center;
-        text-align: center;
+    // .title-wrapper {
+    //     display: flex;
+    //     padding-top: 35px;
+    //     align-items: center;
+    //     text-align: center;
+
+    //     .resources-title {
+    //         font-size: 25px;
+    //         font-weight: bold;
+    //         letter-spacing: 0.05em;
+    //     }
+
+    //     .event-name {
+    //         font-size: 21px;
+    //         letter-spacing: 0.02em;
+    //     }
+
+    //     .event-time {
+    //         font-size: 15px;
+    //         letter-spacing: 0.02em;
+    //     }
+    // }
+
+    // .songlist-comments-wrapper {
+    //     max-height: 520px;
+    //     border-radius: 15px;
+    //     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
+
+    //     .songlist-title {
+    //         font-size: 18px;
+    //         font-weight: bold;
+    //         padding-top: 14px;
+    //         letter-spacing: 0.04em;
+    //     }
+
+    //     .comments-title {
+    //         font-size: 18px;
+    //         font-weight: bold;
+    //         padding-top: 14px;
+    //         padding-left: 20px;
+    //         text-align: left;
+    //         letter-spacing: 0.04em;
+    //     }
+    // }
+    padding: 2% 5%;
+
+    .header-section {
+        margin-bottom: 10px;
 
         .resources-title {
-            font-size: 25px;
+            font-size: $fontsize-header1 + 6;
             font-weight: bold;
-            letter-spacing: 0.05em;
         }
 
-        .event-name {
-            font-size: 21px;
-            letter-spacing: 0.02em;
-        }
-
-        .event-time {
-            font-size: 15px;
-            letter-spacing: 0.02em;
+        .event-name, .event-time {
+            font-size: $fontsize-header2 + 2;
         }
     }
 
-    .songlist-comments-wrapper {
-        max-height: 520px;
-        border-radius: 15px;
-        box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
+    .main-section {
+        display: flex;
 
-        .songlist-title {
-            font-size: 18px;
-            font-weight: bold;
-            padding-top: 14px;
-            letter-spacing: 0.04em;
+        .songlist-wrapper {
+            width: 65%;
+            margin-right: 2%;
+
+            .section {
+                margin-bottom: 2%;
+                div {
+                    font-size: $fontsize-header2;
+                }
+
+                .title {
+                    text-align: left;
+                    padding-left: 2%;
+                    padding-bottom: 5px;
+                    font-size: $fontsize-header1 + 2;
+                }
+
+                .song-wrapper {
+                    text-align: left;
+                    padding-left: 5%;
+                    
+                    .song-info {
+                        width: 60%;
+                        display: flex;
+                        justify-content: space-between;
+                        margin-bottom: 1%;
+                    }
+    
+                    .link {
+                        height: 80%;
+                        width: 80%;
+                        margin-bottom: 2%;
+
+                        a {
+                            color:  rgb(17, 85, 204);
+                        }
+                        .video-wrapper {
+                            overflow: hidden;
+                            padding-bottom: 56.25%;
+                            position: relative;
+                            height: 0;
+
+                            iframe {
+                                left: 0;
+                                top: 0;
+                                height: 100%;
+                                width: 100%;
+                                position: absolute;
+                            }
+                        }
+                    }
+    
+                    .notes .text-section {       
+                        .MuiOutlinedInput-multiline, .MuiInput-multiline {
+                            padding-top: 8px;
+                            padding-bottom: 8px;
+            
+                            textarea {
+                                color: black;
+                                width: 400px;
+                            }
+                        }
+                    }
+                }
+            }
         }
-
-        .comments-title {
-            font-size: 18px;
-            font-weight: bold;
-            padding-top: 14px;
-            padding-left: 20px;
-            text-align: left;
-            letter-spacing: 0.04em;
+    
+        .comments-wrapper {
+            width: 33%;
         }
     }
 
