--- a/client/src/components/screens/ResourcesPage/ResourcesPage.scss
+++ b/client/src/components/screens/ResourcesPage/ResourcesPage.scss
@@ -1,51 +1,6 @@
 @import './../../../globals.scss';
 
 .resources-page-wrapper {
-
-    // .title-wrapper {
-    //     display: flex;
-    //     padding-top: 35px;
-    //     align-items: center;
-    //     text-align: center;
-
-    //     .resources-title {
-    //         font-size: 25px;
-    //         font-weight: bold;
-    //         letter-spacing: 0.05em;
-    //     }
-
-    //     .event-name {
-    //         font-size: 21px;
-    //         letter-spacing: 0.02em;
-    //     }
-
-    //     .event-time {
-    //         font-size: 15px;
-    //         letter-spacing: 0.02em;
-    //     }
-    // }
-
-    // .songlist-comments-wrapper {
-    //     max-height: 520px;
-    //     border-radius: 15px;
-    //     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
-
-    //     .songlist-title {
-    //         font-size: 18px;
-    //         font-weight: bold;
-    //         padding-top: 14px;
-    //         letter-spacing: 0.04em;
-    //     }
-
-    //     .comments-title {
-    //         font-size: 18px;
-    //         font-weight: bold;
-    //         padding-top: 14px;
-    //         padding-left: 20px;
-    //         text-align: left;
-    //         letter-spacing: 0.04em;
-    //     }
-    // }
     padding: 2% 5%;
 
     .header-section {
@@ -133,7 +88,37 @@
     
         .comments-wrapper {
             width: 33%;
+            border: '2px solid red';
+            border: 15px;
+
+            .title {
+                text-align: left;
+                padding-left: 2%;
+                padding-bottom: 5px;
+                font-size: $fontsize-header1 + 2;
+                font-weight: bold;
+            }
+
+            .form-container {
+                display: flex;
+                width: 100%;
+                margin-bottom: 28px;
+                
+                .image-container {
+                    margin-right: 12px;
+                }
+
+                .comment-text {
+                    width: 80%;
+                }
+
+                .post-button {
+                    width: 20%
+                }
+
+            }
         }
     }
 
 }
+
