--- a/client/src/components/screens/ProfilePage/ProfilePage.scss
+++ b/client/src/components/screens/ProfilePage/ProfilePage.scss
@@ -1,3 +1,4 @@
+@import "./../../../globals.scss";
 *{
     margin: 0;
     padding:0;
@@ -8,25 +9,26 @@
     justify-content: center; 
     // background-color: lightblue;
 }
-.container {
+.profile-pic-container {
     display: grid;
     //align-items: center;
     justify-content: center; 
-    grid-column: 1;
-    grid-row: auto;
+    grid-template-columns: 1fr;
     margin: 10px;
-    // background-color: blue;
+    //background-color: blue;
 }
 
 .img-holder {
-    margin: 10px;
+    margin-top: 10px;
+    margin-bottom: -1em;
     display: flex;
     justify-content: center;
+    justify-self: center;
     align-items: center;
     width: 100%;
     height: 150px;
     width: 150px;
-    // background-color: pink;
+    //background-color: pink;
 }
 
 .img {
@@ -37,17 +39,27 @@
 }
 
 .label {
-    width: 100%;
-    margin-left: -100%;
-    // background-color: yellow;
+    color: rgb(105, 105, 105);
+    //width: 100%;
+    //margin-left: -100%;
+    //justify-self: center;
+    //background-color: yellow;
 }
+
 
 .userInfo {
     border: 1.5px solid #CAC9C9;
     border-radius: 20px;
     margin-top: 30px;
     margin-bottom: 50px;
-    padding: 40px 75px;
+    padding: 40px 90px;
+}
+
+.header {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    align-items: center;
+    justify-content: center;
 }
 
 .contactInfo {
@@ -58,11 +70,12 @@
     margin-bottom: 30px;
 }
 
-.email, .password, .phone{
-    //background-color: grey;
+.email, .password, .phone, .firstname, .lastname{
+    display: flex;
     text-align: left;
+    align-items: center;
 }
-.emailValue, .passwordValue, .phoneValue {
+.firstnameValue, .lastnameValue, .emailValue, .emailValueEdit, .passwordValue, .phoneValue {
     //background-color: lightblue;
     text-align: left;
     margin-left: 1em;
@@ -74,9 +87,10 @@
     grid-column: 1 / 5; /* this code makes the row stretch to entire width of the container */
 }
 
-.name {
+.titleName {
     font-weight: 600;
     letter-spacing: 0.3px;
+    margin-top: 30px;
 }
 
 .subheaders {
@@ -97,15 +111,35 @@
     row-gap: 1em;
 }
 
-// https://www.w3schools.com/howto/howto_css_circles.asp
-.dot {
-    height: 10px;
-    width: 10px;
-    background-color: black;
-    border-radius: 50%;
-    display: inline-block;
-    margin-right: 3px;
+.contact-header {
+    grid-column-start: 2;
+}
 
+.edit-wrapper {
+    text-align: right;
+    margin-bottom: 25px; 
+    margin-left: auto;
+}
+
+.edit-icon, .save-icon, .cancel-icon {
+    transform: scale(1.1);   
+}
+
+.save-icon {
+    color: #00B61F;
+}
+
+.cancel-icon{
+    color: #C7351A;
+    margin-left: 0.5em;
+}
+
+.emailValueEdit {
+    padding: 0.6em 0.8em;
+}
+
+.MuiInputBase-root.Mui-disabled {
+    color: black;
 }
 
 #input[type="file"] {
