--- a/client/src/components/screens/PlannerPage/EventCard.scss
+++ b/client/src/components/screens/PlannerPage/EventCard.scss
@@ -53,7 +53,7 @@
 
         .event-info-wrapper {
             display: flex;
-            // justify-content: space-between;
+            justify-content: space-between;
             align-items: center;
             .date-picker-wrapper {
                 margin-bottom: 9px;
