--- a/client/src/components/screens/ProfilePage/ProfilePage.scss
+++ b/client/src/components/screens/ProfilePage/ProfilePage.scss
@@ -74,6 +74,9 @@
     display: flex;
     text-align: left;
     align-items: center;
+    .required {
+        color: red;
+    }
 }
 .firstnameValue, .lastnameValue, .emailValue, .emailValueEdit, .passwordValue, .phoneValue {
     //background-color: lightblue;
