--- a/client/src/components/screens/HomePage/HomePage.scss
+++ b/client/src/components/screens/HomePage/HomePage.scss
@@ -1,7 +1,7 @@
 @import './../../../globals.scss';
 
 .home-page-wrapper {
-   background: linear-gradient($primary-color 0%, #FE9969 100%);
+   background: linear-gradient(#D83B1E 0%, #FE9969 100%);
    
    .main-verse {
       flex-grow: 1;
