--- a/client/src/components/screens/ResourcesPage/ResourcesPage.scss
+++ b/client/src/components/screens/ResourcesPage/ResourcesPage.scss
@@ -30,7 +30,6 @@
             .non-edit-mode {
                 .songlist-header {
                     display: flex;
-                    align-items: center;
                     margin-bottom: 8px;
 
                     .left {
@@ -41,24 +40,24 @@
                         width: 57%;
                         display: flex;
                         justify-content: space-between;
-                        align-items: center;
 
                         .text {
                             font-size: $fontsize-header1 + 2;
-                            line-height: 1.5em;
-                            height: 1.5em;
+                            line-height: 1.8em;
+                            height: 1.8em;
                         }
 
                         .edit-btn {
                             height: 1.8em;
+                            line-height: 1.8em;
                             display: inline-flex;
                             justify-content: center; /* center the content horizontally */
                             align-items: center; /* center the content vertically */
-                            margin-right: 2%;
                             background: $primary-color;
                             border: 1px solid $primary-color;
                             border-radius: 4px;
                             color: white;
+                            padding: 10px;
 
                             &:hover {
                                 cursor: pointer;
@@ -166,21 +165,22 @@
 
                     .center .text {
                         font-size: $fontsize-header1 + 2;
-                        line-height: 1.5em;
-                        height: 1.5em;
+                        line-height: 1.8em;
+                        height: 1.8em;
                     }
 
                     .left, .right {
                         .edit-btn, .cancel-btn {
                             height: 1.8em;
+                            line-height: 1.8em;
                             display: inline-flex;
                             justify-content: center; /* center the content horizontally */
                             align-items: center; /* center the content vertically */
-                            margin-right: 2%;
                             background: $primary-color;
                             border: 1px solid $primary-color;
                             border-radius: 4px;
                             color: white;
+                            padding: 8px;
 
                             &:hover {
                                 cursor: pointer;
@@ -288,8 +288,7 @@
 
             .title {
                 text-align: left;
-                padding-left: 2%;
-                padding-bottom: 5px;
+                margin-bottom: 10px;
                 font-size: $fontsize-header1 + 2;
                 font-weight: bold;
             }
