--- a/client/src/components/screens/PlannerPage/TimeSelect.scss
+++ b/client/src/components/screens/PlannerPage/TimeSelect.scss
@@ -14,19 +14,21 @@
         display: flex;
         align-items: center;
 
-        .current-event {
-            width: 9%;
+        button {
             height: 30px;
+        }
+
+        .current-event {
+            width: 7%;
             margin-left: 1%;
-            margin-bottom: 8px;
             box-shadow: none;
         }
         
         .select-year {
             width: 10%;
             height: 30px;
+            width: 8%;
             margin-left: 1%;
-            margin-bottom: 8px;
 
             .MuiOutlinedInput-root {
                 height: 30px;
@@ -37,19 +39,30 @@
             }
         }
 
-        .slider {
-            width: 60%;
-            margin-left: 2%;
-            margin-right: 1%;
-            color: $primary-color;
+        .slider-wrapper {
+            min-width: 50%;
+            margin: 0 1.5%;
+            .slider {
+                width: 100%;
+                color: $primary-color;
+            }
         }
 
-        .create-event-button, .manage-teams-button {
-            width: 16%;
-            height: 30px;
+        .filter-box {
+            min-width: 9%;
+        }
+
+        .event-btn-wrapper {
+            display: flex;
+            flex-direction: column;
+            width: 11%;
             margin-left: 1%;
-            margin-bottom: 8px;
-            background-color: $primary-color;
+            .create-event-button, .manage-teams-button {
+                background-color: $primary-color;
+            }
+            .manage-teams-button {
+                margin-top: 4px;
+            }
         }
     }
 }
