- add comment by user  - add delete for loggedin user only  - prevent user from clicking "song book" on navbar

--- a/client/src/components/screens/ResourcesPage/Comments.scss
+++ b/client/src/components/screens/ResourcesPage/Comments.scss
@@ -19,6 +19,12 @@
             .comment-author-date {
                 margin-right: 8px;
                 font-size: 13px;
+                width: 90%;
+            }
+
+            .menu-button {
+                width: 10%;
+                max-height: 13px;
             }
         }
 
