--- a/client/src/components/screens/ResourcesPage/ResourcesPage.scss
+++ b/client/src/components/screens/ResourcesPage/ResourcesPage.scss
@@ -289,7 +289,7 @@
             .title {
                 text-align: left;
                 padding-left: 2%;
-                padding-bottom: 5px;
+                padding-bottom: 15px;
                 font-size: $fontsize-header1 + 2;
                 font-weight: bold;
             }
@@ -308,7 +308,14 @@
                 }
 
                 .post-button {
-                    width: 20%
+                    width: 20%;
+                    border: none;
+                    background: none;
+                    font-size: small;
+
+                    &:hover {
+                        cursor: pointer;
+                    }
                 }
 
             }
